# dev/restful-api-schema.ts
@@ -7,13 +7,14 @@ import { BlogSchema, PostSchema } from "./db-schema"
  */
 declare function getBlogs(
   query: PaginationFields & BlogIgnoredField & SortTypeField & {
-    content?: string,
+    content?: string
     /**
      * @default id
      */
-    sortField?: 'id' | 'content',
-    ids?: string[],
+    sortField?: 'id' | 'content'
+    ids?: string[]
   },
+  cookie: MyUserIdField,
 ): Promise<{ result: Blog[], count: number }>
 
 /**
@@ -24,6 +25,7 @@ declare function getBlogs(
 declare function getBlogById(
   query: BlogIgnoredField,
   path: IdField,
+  cookie: MyUserIdField,
 ): Promise<{ result?: Blog }>
 
 /**
@@ -34,8 +36,9 @@ declare function getBlogById(
 declare function createBlog(
   query: BlogIgnoredField,
   body: {
-    content: string,
+    content: string
   },
+  cookie: MyUserIdField,
 ): Promise<{ result: Blog }>
 
 /**
@@ -47,9 +50,10 @@ declare function patchBlog(
   query: BlogIgnoredField,
   path: IdField,
   body: {
-    content?: string,
-    meta?: unknown,
+    content?: string
+    meta?: unknown
   },
+  cookie: MyUserIdField,
 ): Promise<{ result: Blog }>
 
 /**
@@ -59,6 +63,7 @@ declare function patchBlog(
  */
 declare function deleteBlog(
   path: IdField,
+  cookie: MyUserIdField,
 ): Promise<{}>
 
 export type BlogIgnorableField = 'posts' | 'meta'
@@ -71,24 +76,28 @@ interface PaginationFields {
   /**
    * @default 0
    */
-  skip?: number,
+  skip?: number
   /**
    * @default 10
    */
-  take?: number,
+  take?: number
 }
 
 interface SortTypeField {
   /**
    * @default asc
    */
-  sortType?: 'asc' | 'desc',
+  sortType?: 'asc' | 'desc'
 }
 
 interface IdField {
-  id: number,
+  id: number
 }
 
 interface BlogIgnoredField {
-  ignoredFields?: BlogIgnorableField[],
+  ignoredFields?: BlogIgnorableField[]
+}
+
+interface MyUserIdField {
+  myUserId: number
 }
